--- a/_layouts/.gitignore
+++ b/_layouts/.gitignore
@@ -3,4 +3,20 @@ public
 package-lock.json
 yarn.lock
 node_modules
+
+# OS generated files #
+######################
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+# Icon?
+ehthumbs.db
+Thumbs.db
+.cache
+.project
+.settings
+.tmproj
+*.esproj
+nbproject
