--- a/_layouts/package.json
+++ b/_layouts/package.json
@@ -9,6 +9,7 @@
     "gatsby-plugin-react-helmet": "^3.7.0",
     "gatsby-remark-smartypants": "^2.7.0",
     "gatsby-theme-garden": "^0.1.55",
+    "gatsby-transformer-remark": "^2.13.0"
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-helmet": "^6.1.0"
