--- a/_layouts/package.json
+++ b/_layouts/package.json
@@ -5,6 +5,7 @@
   "version": "1.0.0",
   "dependencies": {
     "gatsby": "^2.23.18",
+    "gatsby-plugin-favicon": "^3.1.6",
     "gatsby-theme-garden": "^0.1.28",
     "react": "^16.3.1",
     "react-dom": "^16.3.1"
